# rust_chat_app

./: README.md
app/: Cargo.toml  package-lock.json  package.json
app/src/: App.jsx  main.rs
server/: Cargo.toml
server/src/: main.rs
