[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.20.1"
url = "2.2.2"
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "*"
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.11", features = ["json"] }